test/ambient/base/echo/deploy.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      serviceAccountName: echo
      containers:
      - image: docker.io/fl64/echo
        imagePullPolicy: Always
        name: echo
        ports:
        - containerPort: 8000
          name: http
