test/ambient/base/echo/echo-v2.env.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  template:
    spec:
      containers:
      - name: echo
