test/ambient/base/echo/echo-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-v2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: echo
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/logLevel: info
      creationTimestamp: null
      labels:
        app: echo
        version: v2
    spec:
      containers:
      - env:
        - name: cluster
          value: dev0
        - name: version
          value: v2
        - name: uid
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.uid
        image: docker.io/fl64/echo-http
        imagePullPolicy: IfNotPresent
        name: echo
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: echo-v2
      serviceAccountName: echo-v2
      terminationGracePeriodSeconds: 30
