test/ambient/base/echo/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
    service: echo
spec:
  ports:
  - name: http
    port: 63636
    targetPort: http
  selector:
    app: echo
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  labels:
    app: echo
    version: v1
    service: echo
spec:
  ports:
  - name: http
    port: 63636
    targetPort: http
  selector:
    app: echo
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: echo-v2
  labels:
    app: echo
    version: v2
    service: echo
spec:
  ports:
  - name: http
    port: 63636
    targetPort: http
  selector:
    app: echo
    version: v2
