test/ambient/base/echo/gw.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
 name: echo
 annotations:
   istio.io/service-account: echo
spec:
 gatewayClassName: istio-mesh
