test/ambient/base/echo/ap.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: echo-viewer
spec:
 selector:
   matchLabels:
     app: echo
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/prober-istio/sa/prober", "cluster.local/ns/echo-istio/sa/default", "cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
